--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
 header {
     color:white;
     font-family: "Madimi One", sans-serif;
+    text-align:center;
+    min-width:600px;
 }
 main {
     display:flex;
@@ -38,6 +40,7 @@ form {
     font-family: "Quicksand", sans-serif;
     font-weight:500;
     box-shadow: inset 0 0 6px #000000;
+    max-width:200px;
 }
 input {
     border-style:none;
